# directx12-seed

./: CMakeLists.txt  readme.md
assets/: PixelShader.hlsl  VertexShader.hlsl
src/: Camera.cpp  Camera.h  DX.cpp  DX.h  Geometry.cpp  Geometry.h  Help.h  Main.cpp  Mesh.cpp  Mesh.h  Sample.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  stdafx.h
src/core/: DX.cpp  DX.h  Geometry.cpp  Geometry.h  Mesh.h  PSO.cpp  Res.cpp  Res.h  Scene.cpp  Scene.h  Transform.cpp
src/mat/: Material.h  PSO.cpp  PSO.h  Shader.cpp  Shader.h  Texture.cpp  UnlitMat.cpp  UnlitMat.h  UnlitPso.cpp  UnlitPso.h
src/res/: ConstantBufferRes.cpp  ConstantBufferRes.h  IndexBufferRes.cpp  IndexBufferRes.h  Res.cpp  Res.h  TextureRes.cpp  TextureRes.h  VertexBufferRes.cpp  VertexBufferRes.h
src/samples/: Traingle.cpp  Traingle.h
src/utils/: Help.h
